--- a/portfoliovr1/src/App.css
+++ b/portfoliovr1/src/App.css
@@ -39,6 +39,40 @@ h2 {
   font-size: 12px;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: #edf2f7;
+  color: #4a5568;
+}
+
+.header-container, .footer {
+  background-color: #2d3748;
+  color: #fff;
+}
+
+a {
+  color: #5a67d8;
+  transition: color 0.3s;
+}
+
+a:hover {
+  color: #4a5568;
+}
+
+.button, button {
+  background-color: #5a67d8;
+  color: #fff;
+  border: none;
+  padding: 0.5em 1em;
+  border-radius: 8px;
+  transition: background-color 0.3s;
+}
+
+.button:hover, button:hover {
+  background-color: #434190;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
