--- a/portfoliovr1/src/components/Navigation/style.css
+++ b/portfoliovr1/src/components/Navigation/style.css
@@ -1,20 +1,21 @@
 .portfolio-navigation {
     display: flex;
-    justify-content: space-around;
+    gap: 0.5em;
 }
 
 .portfolio-navigation button {
     background: none;
     border: none;
-    padding: 10px;
+    color: #a0aec0;
     cursor: pointer;
     transition: color 0.3s;
 }
 
-.portfolio-navigation button:hover {
-    color: blue;
+.portfolio-navigation button.active {
+    color: #5a67d8;
+    border-bottom: 2px solid #5a67d8;
 }
 
-.portfolio-navigation .active {
-    color: red;
+.portfolio-navigation button:hover {
+    color: #4a5568;
 }
